[package]
name = "llink"
version = "0.0.1"
edition = "2021"
authors = ["Cybird"]
description = "Secure file sharing tool within the LAN."
repository = "https://github.com/oh-wind/llink"
license = "LGPL-3.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
